--- a/Back/package.json
+++ b/Back/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "node-fetch": "^2.6.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
